# mcp-digital-scribe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: test_archive.jsonld
examples/: memory_test.py  salem_test.py  test_server.py
examples/orchestrator/: __init__.py
src/digital_scribe/: __init__.py  __main__.py  form_geometry.py  server.py
src/digital_scribe/memory/: __init__.py  knowledge_store.py
src/digital_scribe/models/: __init__.py  census_1880.py
src/models/: __init__.py
tests/: __init__.py  conftest.py  test_htr_readiness.py  test_server_logic.py
