[project]
name = "mcp-digital-scribe"
version = "0.1.0"
description = "Sovereign, high-integrity historical ingestion pipeline using MCP for 19th-century artifacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.0",
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digital_scribe", "src/models"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
